Fixed depth input field and added validation.  Added spacing to y-axis chart label.  Increased select form size.

--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -13,6 +13,10 @@
 }
 
 // FORM CSS
+.select.column_collection {
+  min-height: 150px;
+}
+
 .formContainer, .infoFormFields {
   padding: 10px 20px;
 }
@@ -37,7 +41,7 @@
 
 .footer {
   background-color: white;
-  margin-top: -25px;
+  /*margin-top: -25px;*/
   padding: 20px 40px 40px 40px;
 }
 
@@ -94,3 +98,4 @@
 #myModalLabel {
   font-weight: bold;
 }
+
